--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -4,9 +4,9 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://pasat3.dev.pg.gda.pl:5432/seoprod
-spring.datasource.username=pszczola
-spring.datasource.password=Vaivad8f
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 logging.level.root=INFO
 logging.level.org.springframework.web=ERROR
