--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -4,13 +4,18 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
 
-logging.level.root=INFO
-logging.level.org.springframework.web=ERROR
-logging.level.org.hibernate=ERROR
+
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.hibernate.tool.hbm2ddl=WARN
+logging.level.com.vaadin=WARN
 
 logging.level.pl.pszczola3mk=DEBUG
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.console=%C%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Logging pattern for file
+logging.pattern.file= "%C%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+logging.file=/tmp/dbReport.log
