list of upload files added

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,14 @@
 		<version>1.5.4.RELEASE</version>
 	</parent>
 
+	<packaging>jar</packaging>
+
 	<dependencies>
+		<dependency>
+			<groupId>pg.cui.components</groupId>
+			<artifactId>componentsCore</artifactId>
+			<version>5.31.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -93,7 +100,30 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>false</addClasspath>
+							<mainClass>pl.pszczola3mk.dbReport.Application</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
