entites list added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=u
 spring.datasource.password=p
 
+pszczola.datasource.url=localhost:5432/db
+pszczola.datasource.username=u
+pszczola.datasource.password=p
+
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=WARN
